# material_de_apoyo_MDS7201_MDS_UdeChile-Proyecto_de_Ciencia_de_Datos

./: .gitattributes  .gitignore  README.md  _quarto-slides.yml  _quarto.yml  chapter_files.dvc  custom-slides.scss  custom.scss  index.qmd  pyproject.toml  references.bib  styles.css
.dvc/: config
chapters/: 01-introduccion-curso-libro.qmd  01-introduccion-curso-slides.qmd  02-metodologias-ds-libro.qmd  02-metodologias-ds-slides.qmd  03-metodologias-genericas-libro.qmd  03-metodologias-genericas-slides.qmd  04-metodologias-especificas-libro.qmd  04-metodologias-especificas-slides.qmd  05-herramientas-gestion-libro.qmd  05-herramientas-gestion-slides.qmd  06-manifiesto-programacion-libro.qmd  06-manifiesto-programacion-slides.qmd  07-intro-git-libro.qmd  07-intro-git-slides.qmd  08-git-intermedio-libro.qmd  08-git-intermedio-slides.qmd  09-eda-libro.qmd  09-eda-slides.qmd  09-intro-linux-libro.qmd  10-visualizacion-slides.qmd  11-eda-libro.qmd  12-presentacion-slides.qmd  12-visualizacion-libro.qmd  13-intro-linux-libro.qmd  13-intro-linux-slides.qmd  13-storytelling-libro.qmd  13-storytelling-slides.qmd  14-intro-cloud-libro.qmd  14-intro-cloud-slides.qmd  14-presentacion-libro.qmd  15-intro-linux-libro.qmd  15-intro-linux-slides.qmd  15-modularizacion-libro.qmd  15-modularizacion-slides.qmd  16-intro-cloud-libro.qmd  16-intro-cloud-slides.qmd  17-interpretabilidad-libro.qmd  18-causalidad-libro.qmd  18-preprocessing-libro.qmd  18-preprocessing-slides.qmd  (+12 more)
