[project]
name = "mds"
version = "0.1.0"
requires-python = ">=3.11,<3.14"

dependencies = [
    "dowhy>=0.14",
    "imblearn",
    "jupyter",
    "lightgbm>=4.6.0",
    "matplotlib>=3.8",
    "nbconvert>=7.17.1",
    "numpy",
    "optuna>=4.9.0",
    "pacmap",
    "pandas",
    "scipy",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tsfresh>=0.21.2",
    "umap-learn>=0.5.12",
    "xgboost>=3.2.0",
    "ydata-profiling",
]
